# kalshi-AI-automated

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
data/: _tmp_migrate_check.sqlite3-shm  _tmp_migrate_check.sqlite3-wal
scripts/: run_unified_weather_orchestrator.py
src/kalshi_weather/: config.py
src/kalshi_weather/ai/: __init__.py  agents.py  graph.py  llm.py  no_data_messages.py  runner.py  state.py
src/kalshi_weather/db/: __init__.py  db.py  schema.py
src/kalshi_weather/discovery_universe/: __init__.py  cache.py  export.py  families.py  fetch.py  models.py  pagination.py  pipeline.py  scoring.py
src/kalshi_weather/execution/: __init__.py  engine.py  fill_sim.py  models.py  orders.py  preflight.py  risk.py  service.py  snapshot.py
src/kalshi_weather/kalshi/: __init__.py  auth.py  client.py  env.py  models.py
tests/: test_config.py  test_contracts_evidence.py  test_datahub_candidate_selection.py  test_discovery_cache.py  test_discovery_pagination.py  test_discovery_pipeline.py  test_discovery_scoring.py  test_execution_engine.py  test_kalshi_auth.py  test_kalshi_client.py  test_kalshi_env.py  test_kalshi_models.py  test_location_guessing.py  test_market_family_detection.py  test_nws_alerts.py  test_open_meteo_history.py  test_openweather_tool.py  test_portfolio_diagnostics.py  test_risk_anti_repeat_rail.py  test_rt_orderbook.py  test_rt_store.py  test_swarm_final_orchestrator.py  test_thesis_state_repeat.py  test_weather_families.py  test_weather_research_enrichment.py  test_web_research_nws_scope.py  test_ws_auth.py
(+29 files in other folders)
