[project]
name = "kalshi-weather-demo"
version = "0.1.0"
description = "AI-assisted weather betting system (Kalshi demo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "cryptography>=42.0.0",
  "kalshi_python_sync>=3.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_weather"]

[tool.ruff]
line-length = 100
target-version = "py311"

